--- a/src/resources/assets/styles/index.scss
+++ b/src/resources/assets/styles/index.scss
@@ -1,3 +1,22 @@
-.container {
-    background-color: red;
+$body-color: red;
+
+body {
+  color: $body-color;
+  font-size: 50px;
+
+  .container {
+    background-color: blue;
+  }
+}
+
+.teste {
+  font-size: large;
+}
+
+.teste2 {
+  font-size: medium;
+}
+
+.teste3 {
+  font-size: small;
 }
